--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.20.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.4",
     "heroicons": "^2.1.5",
     "html2canvas": "^1.4.1",
     "jodit-react": "^4.1.2",
